@@ -17,11 +17,10 @@ package io.avaje.jsonb.core;
 
 import io.avaje.jsonb.*;
 
-import java.lang.annotation.Annotation;
-import java.lang.reflect.Method;
 import java.lang.reflect.Type;
 import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.*;
 
@@ -61,7 +60,7 @@ final class BasicTypeAdapters {
         return null;
       };
 
-  private static final class UuidAdapter extends JsonAdapter<UUID> {
+  private static final class UuidAdapter implements JsonAdapter<UUID> {
     @Override
     public UUID fromJson(JsonReader reader) {
       return UUID.fromString(reader.readString());
@@ -78,12 +77,12 @@ final class BasicTypeAdapters {
     }
   }
 
-  private static final class UrlAdapter extends JsonAdapter<URL> {
+  private static final class UrlAdapter implements JsonAdapter<URL> {
     @Override
     public URL fromJson(JsonReader reader) {
       try {
-        return new URL(reader.readString());
-      } catch (MalformedURLException e) {
+        return new URI(reader.readString()).toURL();
+      } catch (MalformedURLException | URISyntaxException e) {
         throw new JsonDataException(e);
       }
     }
@@ -99,7 +98,7 @@ final class BasicTypeAdapters {
     }
   }
 
-  private static final class UriAdapter extends JsonAdapter<URI> {
+  private static final class UriAdapter implements JsonAdapter<URI> {
     @Override
     public URI fromJson(JsonReader reader) {
       return URI.create(reader.readString());
@@ -116,7 +115,7 @@ final class BasicTypeAdapters {
     }
   }
 
-  static final class BooleanAdapter extends JsonAdapter<Boolean> {
+  static final class BooleanAdapter implements JsonAdapter<Boolean> {
     @Override
     public Boolean fromJson(JsonReader reader) {
       return reader.readBoolean();
@@ -133,7 +132,7 @@ final class BasicTypeAdapters {
     }
   }
 
-  static final class ByteAdapter extends JsonAdapter<Byte> {
+  static final class ByteAdapter implements JsonAdapter<Byte> {
     @Override
     public Byte fromJson(JsonReader reader) {
       return (byte) rangeCheckNextInt(reader, "a byte", -128, 255);
@@ -150,7 +149,7 @@ final class BasicTypeAdapters {
     }
   }
 
-  static final class CharacterAdapter extends JsonAdapter<Character> {
+  static final class CharacterAdapter implements JsonAdapter<Character> {
     @Override
     public Character fromJson(JsonReader reader) {
       String value = reader.readString();
@@ -172,7 +171,7 @@ final class BasicTypeAdapters {
     }
   }
 
-  static final class DoubleAdapter extends JsonAdapter<Double> {
+  static final class DoubleAdapter implements JsonAdapter<Double> {
     @Override
     public Double fromJson(JsonReader reader) {
       return reader.readDouble();
@@ -189,7 +188,7 @@ final class BasicTypeAdapters {
     }
   }
 
-  static final class FloatAdapter extends JsonAdapter<Float> {
+  static final class FloatAdapter implements JsonAdapter<Float> {
     @Override
     public Float fromJson(JsonReader reader) {
       float value = (float) reader.readDouble();
@@ -212,7 +211,7 @@ final class BasicTypeAdapters {
     }
   }
 
-  static final class IntegerAdapter extends JsonAdapter<Integer> {
+  static final class IntegerAdapter implements JsonAdapter<Integer> {
     @Override
     public Integer fromJson(JsonReader reader) {
       return reader.readInt();
@@ -229,7 +228,7 @@ final class BasicTypeAdapters {
     }
   }
 
-  static final class LongAdapter extends JsonAdapter<Long> {
+  static final class LongAdapter implements JsonAdapter<Long> {
     @Override
     public Long fromJson(JsonReader reader) {
       return reader.readLong();
@@ -246,7 +245,7 @@ final class BasicTypeAdapters {
     }
   }
 
-  static final class ShortAdapter extends JsonAdapter<Short> {
+  static final class ShortAdapter implements JsonAdapter<Short> {
     @Override
     public Short fromJson(JsonReader reader) {
       return (short) rangeCheckNextInt(reader, "a short", -32768, 32767);
@@ -263,7 +262,7 @@ final class BasicTypeAdapters {
     }
   }
 
-  static final class StringAdapter extends JsonAdapter<String> {
+  static final class StringAdapter implements JsonAdapter<String> {
     @Override
     public String fromJson(JsonReader reader) {
       return reader.readString();
@@ -290,7 +289,7 @@ final class BasicTypeAdapters {
   }
 
   @SuppressWarnings("rawtypes")
-  static final class ObjectJsonAdapter extends JsonAdapter<Object> {
+  static final class ObjectJsonAdapter implements JsonAdapter<Object> {
     private final Jsonb jsonb;
     private final JsonAdapter<List> listJsonAdapter;
     private final JsonAdapter<Map> mapAdapter;
@@ -352,7 +351,7 @@ final class BasicTypeAdapters {
     }
   }
 
-  static class EnumJsonAdapter<T extends Enum<T>> extends JsonAdapter<T> {
+  static class EnumJsonAdapter<T extends Enum<T>> implements JsonAdapter<T> {
 
     protected final Class<T> enumType;
 
